...
    private let networkClient: NetworkClient
    private let endpoint: NetworkClient.Endpoint

    init(networkClient: NetworkClient = NetworkClient()) {
        self.networkClient = networkClient

        if let endpointType = ProcessInfo.processInfo.environment["USE_ENDPOINT"] {
            switch endpointType {
            case "malformed": self.endpoint = .malformedRecipes
            case "empty": self.endpoint = .emptyRecipes
            default: self.endpoint = .recipes
            }
        } else {
...
